# trigo.cpp

./: .gitignore  CMakeLists.txt  README.md  setup.py  test_bindings.py  test_board_ranges.cpp
.github/workflows/: release.yml
docs/: CUDA_MCTS_RESEARCH.md  FULL_MCTS_CACHE_TODO.md  KVCACHE_BENCHMARK.md  MCTS_PREFIX_CACHE_INTEGRATION.md  MCTS_SEARCH_DETAILS.md  PASS_SELECTION_ANALYSIS.md  PERFORMANCE_ANALYSIS-1205.md  PERFORMANCE_ANALYSIS-1208.md  PERFORMANCE_ANALYSIS-1211.md  PERFORMANCE_ANALYSIS_1216.md  PLAN.md  VALUE_SIGN_BUG_FIX.md  mcts-pass-selection-analysis.md
include/: board_shape_candidates.hpp  cached_mcts.hpp  game_recorder.hpp  mcts.hpp  mcts_moc.hpp  prefix_cache_inferencer.hpp  prefix_tree_builder.hpp  self_play_policy.hpp  shared_model_inferencer.hpp  tgn_tokenizer.hpp  tgn_utils.hpp  trigo_coords.hpp  trigo_game.hpp  trigo_game_utils.hpp  trigo_types.hpp
models/: trained_shared
prototype/kvcache/: CMakeLists.txt  KVCACHE_BENCHMARK.md  README.md  SUMMARY.md  export_gpt2_kvcache.py  export_minimal_model.py  export_simple_model.py  test_kvcache.cpp  test_minimal.cpp  test_python.py
prototype/kvcache/include/: kvcache_inferencer.hpp
prototype/kvcache/models/: .gitignore  config.json
prototype/kvcache/src/: kvcache_inferencer.cpp
src/: bindings.cpp  prefix_cache_inferencer.cpp  prefix_tree_builder.cpp  self_play_generator.cpp  shared_model_inferencer.cpp  tgn_tokenizer.cpp  trigo_game.cpp
tests/: benchmark_dynamic_shapes.cpp  benchmark_value_cache.cpp  benchmark_value_cache_simple.cpp  debug_capture.cpp  debug_capture2.cpp  debug_capture3.cpp  debug_territory.cpp  test_alphazero_from_prefix.cpp  test_alphazero_mcts.cpp  test_cache_vs_tree_equivalence.cpp  test_cached_alphazero_policy.cpp  test_cached_inference_game.cpp  test_cached_mcts.cpp  test_cached_neural_policy.cpp  test_compare_with_ts.cpp  test_corrected_models.cpp  test_evaluated_ids_match.cpp  test_extend_cache.cpp  test_game_replay.cpp  test_incremental_consistency.cpp  test_incremental_gpu.cpp  test_inference_equivalence.py  test_inference_equivalence_cpp.cpp  test_kv_cache_comparison.cpp  test_kvcache_prototype.cpp  test_mcts.cpp  test_mcts_from_prefix.cpp  test_mcts_full_search.cpp  test_mcts_prefix.cpp  test_mcts_simple.cpp  test_mcts_single_sim.cpp  test_mcts_single_step.cpp  test_neural_policy_inference.cpp  test_onnxruntime_cuda.cpp  test_policy_comparison.cpp  test_policy_consistency.cpp  test_policy_value_validation.cpp  test_prefix_cache_correctness.cpp  test_prefix_cache_inferencer.cpp  test_prefix_tree_builder.cpp  (+17 more)
tools/: README_BENCHMARK.md  benchmark_cache_comparison.sh  benchmark_mcts.sh  benchmark_prefix_cache.sh  compare_game_results.py  cross_language_validation.py
